@@ -41,96 +41,67 @@ ifndef PLATFORM
   endif
 endif
 
-# Detect/set processor architecture
+# Detect system processor architecture
 ifndef ARCHITECTURE
   ifeq ($(PLATFORM),Windows)
-    ifeq ($(PROCESSOR_ARCHITECTURE),x86)
-      ARCHITECTURE             := i586
-      ARCHITECTURE_CFLAGS      := -march=i586 -m32
-    else ifeq ($(PROCESSOR_ARCHITECTURE),AMD64)
-      ARCHITECTURE             := x86_64
-      ARCHITECTURE_CFLAGS      := -march=x86-64 -m64
-    else
-      ARCHITECTURE             := i586
-      ARCHITECTURE_CFLAGS      := -march=i586 -m32
-    endif
-  else # BUILD_PLATFORM != Windows
-    BUILD_ARCH             := $(shell uname -m)
-    ifeq ($(patsubst armv6%,armv6,$(BUILD_ARCH)),armv6)
-      ARCHITECTURE           := arm32
-      ARCHITECTURE_CFLAGS    := -march=armv6 -marm
-    else ifeq ($(patsubst armv7ve%,armv7ve,$(BUILD_ARCH)),armv7ve)
-      ARCHITECTURE           := arm32
-      ARCHITECTURE_CFLAGS    := -march=armv7ve -marm
-    else ifeq ($(patsubst armv7%,armv7,$(BUILD_ARCH)),armv7)
-      ARCHITECTURE           := arm32
-      ARCHITECTURE_CFLAGS    := -march=armv7-a -marm
-    else ifeq ($(patsubst armv8%,armv8,$(BUILD_ARCH)),armv8)
-      ARCHITECTURE           := aarch64
-      ARCHITECTURE_CFLAGS    := -march=armv8-a
-    else ifeq ($(patsubst aarch64%,aarch64,$(BUILD_ARCH)),aarch64)
-      ARCHITECTURE           := aarch64
-      ARCHITECTURE_CFLAGS    := -march=armv8-a
-    else ifeq ($(BUILD_ARCH),arm)
-      ARCHITECTURE           := arm32
-      ARCHITECTURE_CFLAGS    := -march=armv6 -marm
-    else ifeq ($(BUILD_ARCH),x86_64)
-      ARCHITECTURE           := x86_64
-      ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
-    else ifeq ($(BUILD_ARCH),amd64)
-      ARCHITECTURE           := x86_64
-      ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
-    else ifeq ($(BUILD_ARCH),i86pc)
-      ARCHITECTURE           := x86_64
-      ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
-    else ifeq ($(patsubst i%86,i586,$(BUILD_ARCH)),i586)
-      ARCHITECTURE           := i586
-      ARCHITECTURE_CFLAGS    := -march=i586 -m32
-    else ifeq ($(BUILD_ARCH),x86)
-      ARCHITECTURE           := i586
-      ARCHITECTURE_CFLAGS    := -march=i586 -m32
-    else
-      override ARCHITECTURE   =
-      ARCHITECTURE_CFLAGS    :=
-    endif
-  endif # PLATFORM != Windows
-else
-  ifeq ($(ARCHITECTURE),x86_64)
-    ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
-  else ifeq ($(ARCHITECTURE),amd64)
-    override ARCHITECTURE   = x86_64
-    ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
-  else ifeq ($(ARCHITECTURE),i586)
-    ARCHITECTURE_CFLAGS    := -march=i586 -m32
-  else ifeq ($(ARCHITECTURE),ia32)
-    override ARCHITECTURE   = i586
-    ARCHITECTURE_CFLAGS    := -march=i586 -m32
-  else ifeq ($(ARCHITECTURE),x86)
-    override ARCHITECTURE   = i586
-    ARCHITECTURE_CFLAGS    := -march=i586 -m32
-  else ifeq ($(ARCHITECTURE),arm32)
-    override ARCHITECTURE   = arm32
-    ARCHITECTURE_CFLAGS    := -march=armv6 -marm
-  else ifeq ($(ARCHITECTURE),arm32-v6)
-    override ARCHITECTURE   = arm32
-    ARCHITECTURE_CFLAGS    := -march=armv6 -marm
-  else ifeq ($(ARCHITECTURE),armv6)
-    override ARCHITECTURE   = arm32
-    ARCHITECTURE_CFLAGS    := -march=armv6 -marm
-  else ifeq ($(ARCHITECTURE),arm32-v7)
-    override ARCHITECTURE   = arm32
-    ARCHITECTURE_CFLAGS    := -march=armv7-a -marm
-  else ifeq ($(ARCHITECTURE),armv7)
-    override ARCHITECTURE   = arm32
-    ARCHITECTURE_CFLAGS    := -march=armv7-a -marm
-  else ifeq ($(ARCHITECTURE),aarch64)
-    ARCHITECTURE_CFLAGS    := -march=armv8-a
-  else ifeq ($(ARCHITECTURE),armv8)
-    override ARCHITECTURE   = aarch64
-    ARCHITECTURE_CFLAGS    := -march=armv8-a
+    BUILD_ARCH             := $(PROCESSOR_ARCHITECTURE)
   else
-    ARCHITECTURE_CFLAGS    :=
+    BUILD_ARCH             := $(shell uname -m)
   endif
+else
+  BUILD_ARCH             := $(ARCHITECTURE)
+endif
+
+# Set actual architecture
+# The current architecture can be obtained by: gcc -Q --help=target
+ifeq ($(patsubst armv6%,armv6,$(BUILD_ARCH)),armv6)
+  override ARCHITECTURE   = arm32
+  ARCHITECTURE_CFLAGS    := -march=armv6 -marm
+else ifeq ($(patsubst armv7ve%,armv7ve,$(BUILD_ARCH)),armv7ve)
+  override ARCHITECTURE   = arm32
+  ARCHITECTURE_CFLAGS    := -march=armv7ve -marm
+else ifeq ($(patsubst armv7%,armv7,$(BUILD_ARCH)),armv7)
+  override ARCHITECTURE   = arm32
+  ARCHITECTURE_CFLAGS    := -march=armv7-a -marm
+else ifeq ($(patsubst armv8%,armv8,$(BUILD_ARCH)),armv8)
+  override ARCHITECTURE   = aarch64
+  ARCHITECTURE_CFLAGS    := -march=armv8-a
+else ifeq ($(patsubst aarch64%,aarch64,$(BUILD_ARCH)),aarch64)
+  override ARCHITECTURE   = aarch64
+  ARCHITECTURE_CFLAGS    := -march=armv8-a
+else ifeq ($(BUILD_ARCH),arm32)
+  override ARCHITECTURE   = arm32
+  ARCHITECTURE_CFLAGS    := -march=armv6 -marm
+else ifeq ($(BUILD_ARCH),arm)
+  override ARCHITECTURE   = arm32
+  ARCHITECTURE_CFLAGS    := -march=armv6 -marm
+else ifeq ($(patsubst %x86_64%,x86_64,$(BUILD_ARCH)),x86_64)
+  override ARCHITECTURE   = x86_64
+  ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
+else ifeq ($(patsubst %amd64%,amd64,$(BUILD_ARCH)),amd64)
+  override ARCHITECTURE   = x86_64
+  ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
+else ifeq ($(patsubst %AMD64%,AMD64,$(BUILD_ARCH)),AMD64)
+  override ARCHITECTURE   = x86_64
+  ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
+else ifeq ($(BUILD_ARCH),i86pc)
+  override ARCHITECTURE   = x86_64
+  ARCHITECTURE_CFLAGS    := -march=x86-64 -m64
+else ifeq ($(patsubst i%86,i586,$(BUILD_ARCH)),i586)
+  override ARCHITECTURE   = i586
+  ARCHITECTURE_CFLAGS    := -march=i586 -m32
+else ifeq ($(BUILD_ARCH),x86)
+  override ARCHITECTURE   = i586
+  ARCHITECTURE_CFLAGS    := -march=i586 -m32
+else ifeq ($(BUILD_ARCH),riscv32)
+  override ARCHITECTURE   = riscv32
+  ARCHITECTURE_CFLAGS    := -march=rv32imafdc -mabi=lp32d
+else ifeq ($(BUILD_ARCH),riscv64)
+  override ARCHITECTURE   = riscv64
+  ARCHITECTURE_CFLAGS    := -march=rv64imafdc -mabi=lp64d
+else
+  override ARCHITECTURE   =
+  ARCHITECTURE_CFLAGS    :=
 endif
 
 # Extension of libraries
@@ -207,11 +178,13 @@ TEST                       := 0
 
 # Set-up list of common variables
 COMMON_VARS = \
-    ROOTDIR \
-    ROOT_ARTIFACT_ID \
+	ROOTDIR \
+	ROOT_ARTIFACT_ID \
 	PLATFORM \
 	ARCHITECTURE \
 	ARCHITECTURE_CFLAGS \
+	BUILDDIR \
+	FEATURES \
 	LIBRARY_EXT \
 	LIBRARY_PREFIX \
 	STATICLIB_EXT \
@@ -219,8 +192,10 @@ COMMON_VARS = \
 	PKGCONFIG_EXT \
 	PREFIX \
 	LIBDIR \
+	SHAREDDIR \
 	BINDIR \
 	INCDIR \
+	ETCDIR \
 	TEMPDIR \
 	TEST \
 	DEBUG \
@@ -231,12 +206,17 @@ COMMON_VARS = \
 
 sysvars:
 	echo "List of available system variables:"
+	echo "  ADD_FEATURES              list of features enabled in the build as an addition to default"
 	echo "  ARCHITECTURE              target architecture to perform build"
 	echo "  ARCHITECTURE_CFLAGS       compiler flags to specify architecture"
+	echo "  ARCHITECTURE_LDFLAGS      linker flags to specify architecture"
 	echo "  BINDIR                    location of the binaries"
+	echo "  BUILDDIR                  location of the build directory"
 	echo "  DEBUG                     build with debug options"
 	echo "  DEVEL                     build with modules checked out for read/write URL"
+	echo "  ETCDIR                    location of system configuration files"
 	echo "  EXECUTABLE_EXT            file extension for executable files"
+	echo "  FEATURES                  list of features enabled in the build"
 	echo "  INCDIR                    location of the header files"
 	echo "  LIBDIR                    location of the library"
 	echo "  LIBRARY_EXT               file extension for library files"
@@ -245,7 +225,9 @@ sysvars:
 	echo "  PLATFORM                  target software platform to perform build"
 	echo "  PREFIX                    installation prefix for binary files"
 	echo "  PROFILE                   build with profile options"
+	echo "  SHAREDDIR                 location of the shared files"
 	echo "  STATICLIB_EXT             file extension for static library files"
+	echo "  SUB_FEATURES              list of features disabled in the build as a subtraction of default"
 	echo "  TEMPDIR                   location of temporary directory"
 	echo "  TEST                      use test build"
 	echo "  TRACE                     compile with additional trace information output"
